# fast-fourier-transform

./: .gitignore  CMakeLists.txt  README.md  fft_distributed.cpp  fft_distributed.h  fft_multiThreaded.cpp  fft_multiThreaded.h  fft_serial.cpp  fft_serial.h  multiThreadedTesting.cpp  test_distributed.cpp  test_parallel.cpp  test_serial.cpp  testing.cpp  testing_distributed.cpp  utillity.cpp  utillity.cpp.in  utillity.h
core/: utils.h
plotting/: construct_plots.py  get_data_distributed.py  get_data_parallel.py  get_data_serial.py  parallel.json
to_hand_in/: fft_distributed.cpp  fft_distributed.h  test_distributed.cpp  test_parallel.cpp  test_serial.cpp
to_hand_in/plotting/: distributed.json  get_data_distributed.py  get_data_parallel.py  get_data_serial.py  parallel.json  parallel_justICP.json
